Fix the layout of the append button on Answers in Suggest.

The existing layout assumes a fixed height for suggestions in the
omnibox suggestion popup. This assumption is violated by Answers in
Suggest rows. The assumption relates to the horizontal layout. There's
no particular reason why a different horizontal layout might not be
chosen independent of the row height, so this change uses a constant
instead, initially set to the non-AiS height of the suggest rows.

Also, fix some terminology in this file, replacing left/right with
leading/trailing.

BUG=680722

Review-Url: https://codereview.chromium.org/2629723002
Cr-Commit-Position: refs/heads/master@{#443556}

Former-commit-id: ae261b81e2f534a606db83c6ef4a15f64237f90f