ios/chrome/browser/ui/omnibox/omnibox_popup_material_row.h
@@ -30,7 +30,7 @@
 
 // Update the match type icon with the supplied image ID and adjust its position
 // based on the current size of the row.
-- (void)updateLeftImage:(int)imageID;
+- (void)updateLeadingImage:(int)imageID;
 
 @end
 
